--- a/index.html
+++ b/index.html
@@ -11,17 +11,36 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="icon" type="image/png" href="Images/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="Images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="Images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="Images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="Images/site.webmanifest" />
   </head>
 
   <body>
     <header>
-      <div class="welcome"></div>
+      <div class="banner">
+        <img src="Images/Banner.png" alt="" />
+      </div>
     </header>
 
     <nav class="nav" , id="navbar">
       <div class="logo">
-        <a href=""><img src="Images/Logo2.png" alt="" id="logo" /></a>
+        <a href=""><img src="Images/Logo.png" alt="" id="logo" /></a>
       </div>
 
       <div class="navLinks">
@@ -48,7 +67,6 @@
 
       <section id="services">
         <h2>Services</h2>
-
         <div class="card-container">
           <div class="card">
             <img
@@ -217,21 +235,23 @@
             CIT, Cossipore, Kolkata, West Bengal 700002
           </p>
           <div class="social">
-            <p>Follow Us:</p>
-            <a href="https://github.com/adu-coder" target="_blank"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-            <a
-              href="https://www.instagram.com/__lll__aditya__lll__/"
-              target="_blank"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-            <a href="https://wa.me/7003229513" target="_blank"
-              ><i class="fa-brands fa-whatsapp"></i
-            ></a>
-            <a href="mailto:adityaagarwal1489@gmail.com" target="_blank"
-              ><i class="fa-regular fa-envelope"></i
-            ></a>
+            <p id="follow">
+              Follow Us: <br />
+              <a href="https://github.com/adu-coder" target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/__lll__aditya__lll__/"
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="https://wa.me/7003229513" target="_blank"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+              <a href="mailto:adityaagarwal1489@gmail.com" target="_blank"
+                ><i class="fa-regular fa-envelope"></i
+              ></a>
+            </p>
           </div>
           <p id="contact">
             Phone: 123-456-7890 <br />Email: info@geetsunidesigner.com
@@ -239,9 +259,7 @@
         </div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d310.51057678160896!2d88.37236258531448!3d22.62429992238347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89dd10a1177e3%3A0x1d464e8dbcc04193!2sGEETSUNI%20DESIGNER!5e0!3m2!1sen!2sin!4v1717718300413!5m2!1sen!2sin"
-          width="750"
-          height="300"
-          style="border: 0"
+          style="border: 0; height: 45vmin; width: 80vmin"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
